# RelaxedUnscentedTransformation

./: CMakeLists.txt  LICENSE  README.md  install.bat  install_eigen_submodule.bat
cmake/: ConfigLinux.cmake.in  ConfigWindows.cmake.in  ThirdPartyHandling.cmake
cpp/lib/: AUT.h  CMakeLists.txt  PartialCholevski.h  RelUT.h  UT.h  index_selector.h
cppsource/: AUT.h  Cholesky.cpp  Cholesky.h  IndexSelector.cpp  IndexSelector.h  PartialCholevski.cpp  PartialCholevski.h  RelAUT.h  RelUT.cpp  RelUT.h  RelaxedUT.cpp  RelaxedUT.h  RelaxedUTN.h  SelUT.h  Stoch.cpp  Stoch.h  UT.h  UTComponents.cpp  UTComponents.h  UTCore.h  UTMethods.h  UTMultiscaledCore.h  index_selector.cpp  index_selector.h
cpptester/: AUT.h  CMakeLists.txt  FilterRMSE.cpp  FilterRMSE.h  INES_lib.cpp  INES_lib.h  INES_main.cpp  INES_model.cpp  INES_model.h  Model.cpp  Model.h  Norder_example.cpp  RMSE.cpp  RMSE.h  RelaxedAUT.h  SLAM_example.cpp  SLAMexample.cpp  SLAMexample.h  SLAMmodels.cpp  SLAMmodels.h  Simulator.cpp  Simulator.h  Simulator_output_UT_2.m  Simulator_output_UT_3.m  Simulator_output_UT_4.m  Simulator_output_relaxedUT_2.m  Simulator_output_relaxedUT_3.m  Simulator_output_relaxedUT_4.m  UTComponents.cpp  UTComponents.h  comparison_example.cpp  groundtruth.m  lin_example.cpp  nonlinear_example.cpp  plotter.m  readData.cpp  readData.h  sim_example.cpp  sim_lib.cpp  sim_lib.h  (+2 more)
